--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,72 @@
+@font-face {
+  font-family: 'Vazir-FD';
+  src: url(./asets/vazir/woff/Vazir-FD.woff) format("woff");
+}
+*{
+  font-family: "Vazir-FD" !important;
+}
 body{
-  background-color: #0b0c10 !important;
+  background-color: #142850 !important;
+  direction: rtl !important;
 }
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 40px 60px;
 }
+.orginal{
+  padding: 20px 30px !important;
+  background-color: #32407B;
+  border-radius: 8px!important;
+  width: 90% !important;
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center !important;
+  align-items: center !important;
+}
+h1{
+  color: #fff !important;
+  font-size: 35px !important;
+  font-weight: normal !important;
+}
 .header{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 100%;
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+}
+.ant-btn{
+  display: inline-flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  background-color: #151965 !important;
+  color: #fff !important;
+  text-shadow: 0 1px 3px #000 !important;
+  padding: 20px 15px !important;
+  border-radius: 10px !important;
+  border: 2px solid #293A80 !important;
+  box-shadow: 0 -1px 3px #000 !important;
+  font-size: 16px !important;
+  margin: 5px !important;
+  cursor: pointer !important;
+  transition: all 0.3s 0.1s ease-in !important;
 }
 .ant-modal-content{
   border-radius: 15px !important;
-  border:  2px solid #45a29e !important;
+  border:  2px solid #fff !important;
+  background-color: #32407B !important;
+  color: #fff !important;
 }
 .ant-modal-header{
+  display: flex !important;
   border-radius: 15px !important;
-  border-bottom: 1px solid #45a29e  !important;
+  border-bottom: 1px solid #151965  !important;
+  background-color: #32407B !important;
+  color: #fff !important;
+}
+.ant-modal-title{
+  color: #fff !important;
 }
 .ant-modal-body{
   display: flex;
@@ -25,8 +75,10 @@ body{
   align-items: center;
 }
 .ant-modal-footer{
+  direction: ltr !important;
+  text-align: center !important;
   border-radius: 15px !important;
-  border-top: 1px solid #45a29e  !important;
+  border-top: 1px solid #151965  !important;
 }
 .modal-div{
   width: 80%;
@@ -35,29 +87,33 @@ body{
   align-items: center !important;
 }
 .ant-modal-close{
-  width: 5%;
-  height: 10%;
+  right: unset !important;
+  left: 0 !important; 
+  width: 7% !important;
+  height: 10% !important;
   margin: 8px 10px !important;
 }
-input{
+Input{
   outline: none !important;
-  border: 2px solid #45a29e !important;
+  border: 1px solid #151965 !important;
+  background-color: #e7e6e6 !important;
+  color: #000 !important; 
   border-radius: 10px !important;
-  padding: 7px !important;
+  padding: 8px !important;
   font-size: 16px !important;
   margin: 5px !important;
   cursor: pointer !important;
 }
-button{
+Button{
   display: inline-flex !important;
   justify-content: center !important;
   align-items: center !important;
-  background-color: #66a29e !important;
+  background-color: #151965 !important;
   color: #fff !important;
   text-shadow: 0 1px 3px #000 !important;
-  padding: 7px 15px !important;
+  padding: 8px 15px !important;
   border-radius: 10px !important;
-  border: 2px solid #45a29e !important;
+  border: 2px solid #293A80 !important;
   box-shadow: 0 -1px 3px #000 !important;
   font-size: 16px !important;
   margin: 5px !important;
@@ -66,7 +122,7 @@ button{
 }
 button:hover{
   background-color: #fff !important;
-  color: #45a29e !important;
+  color: #293A80 !important;
   box-shadow: 0 1px 3px #000 !important;
   text-shadow: none !important;
 }
