--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,61 @@ button:hover{
 span{
   font-size: 16px !important;
 }
+#active-h4{
+  color: #fff !important;
+  margin: 15px 0 !important;
+  align-self: flex-start !important;
+}
+.table-user{
+  display: flex !important;
+  justify-content: center !important; 
+  align-items: center !important;
+  margin: 10px 20px !important;
+  border-radius: 20px !important;
+  overflow: hidden !important;
+  font-size: 16px !important;
+}
+.table{
+  text-align: center !important;
+  color: #fff !important;
+  border: 3px solid #151965 !important;
+  padding: 10px 0 !important;
+  margin-bottom: 0 !important;
+}
+.table thead{
+  border: 3px solid #151965 !important;
+  background-color: #151965;
+}
+.table tbody{
+  border: 3px solid #151965 !important;
+}
+.table th{
+  padding: 15px 0 !important;
+  border-bottom: none !important;
+}
+.table td{
+  padding: 20px 0 !important;
+  border-top: 2px solid #151965 !important;
+}
+.btn-td{
+  padding: 0 !important;
+  margin: 0 !important;
+  text-align: center !important;
+  width: 20% !important;
+}
+.btn-table{
+  display: inline-flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  background-color: #151965 !important;
+  color: #fff !important;
+  text-shadow: 0 1px 3px #000 !important;
+  padding: 8px 15px !important;
+  border-radius: 10px !important;
+  border: 2px solid #293A80 !important;
+  box-shadow: 0 -1px 3px #000 !important;
+  font-size: 16px !important;
+  margin: 5px !important;
+  cursor: pointer !important;
+  transition: all 0.3s 0.1s ease-in !important;
+}
