--- a/src/App.css
+++ b/src/App.css
@@ -196,6 +196,6 @@ span{
   width: 70% !important;
 }
 .bi-arrow-clockwise{
-  margin: 20px auto !important;
+  margin: 30px 0 !important;
   font-size: 30px !important;
 }
